# PSA-Controle

./: pyproject.toml
export/: ARX.hkl  dados.csv
src/: 1.ARX.ipynb  2.simulate.ipynb  3.visualize.ipynb
src/MATLAB/IHMPC/: ihmpc_slack.m  opom.m  output.mat
src/MATLAB/incremental/: FKalman.m  output.mat  sim_issmpc.m
src/MATLAB/posicional/: output.mat  sim_ssmpc.m
src/lib/: plot.py
